--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -13,6 +13,14 @@
 <a href="_find_element_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_find_sum_8c.html"/>
 <a href="_find_sum_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
+<a href="_lista_8c.html"/>
+<a href="_lista_8c.html#a169a25e42f535e62afeea64bb05b297e"/>
+<a href="_lista_8c.html#a589e2985bc1b41a1392960746f2c929e"/>
+<a href="_lista_8c.html#a5f4cee015f0b567abe90ead5e4359c96"/>
+<a href="_lista_8c.html#a8be7ec26f6cd51219be210b939a6bbd3"/>
+<a href="_lista_8c.html#ac9d6f87e42452e0b9ad10c626f435a9b"/>
+<a href="_lista_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
+<a href="_lista_8c.html#aee1812c095b7f9d760aaa95b8434badf"/>
 <a href="_prove_di_visualizzazione_8c.html"/>
 <a href="_prove_di_visualizzazione_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_r_e_a_d_m_e_8md.html"/>
@@ -49,6 +57,9 @@
 <a href="globals_func.html"/>
 <a href="globals_vars.html"/>
 <a href="index.html"/>
+<a href="lista_8h.html"/>
+<a href="lista_8h.html#aabf4f709c8199e41cf279c77112345fe"/>
+<a href="lista_8h_source.html"/>
 <a href="main_8c.html"/>
 <a href="main_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="md__r_e_a_d_m_e.html"/>
@@ -71,6 +82,9 @@
 <a href="struct_input_error.html#a02562a8d5feec6a5f4d903b4cbd9509b"/>
 <a href="struct_network_error.html"/>
 <a href="struct_network_error.html#ab54cf2ffe7a35b9c7d13233fd5dac79f"/>
+<a href="structnode.html"/>
+<a href="structnode.html#a5c449ac988125bcc21dcee8783fa364b"/>
+<a href="structnode.html#aad210fa7c160a49f6b9a3ffee592a2bc"/>
 <a href="structprofessore.html"/>
 <a href="structprofessore.html#a3b7ea7403535eb4c2e5f6269b2deeeee"/>
 <a href="structprofessore.html#aca45817b6a45c67e0b5024c2aac481df"/>
