--- a/html/main_8c.html
+++ b/html/main_8c.html
@@ -118,6 +118,7 @@ Funzioni</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
+<p>&lt;variabile per la scelta</p>
 
 </div>
 </div>
