--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -8,6 +8,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
+<a href="_albero_8c.html"/>
+<a href="_albero_8c.html#a1536678d8019f0e30594b80f74a404f8"/>
+<a href="_albero_8c.html#a8f5fe006ff9d81208399bb91b7679757"/>
+<a href="_albero_8c.html#ab99b385bc6420f7a610ef8ee3277acd7"/>
+<a href="_albero_8c.html#acff2e7061cbf3cc0c5c05bb4e931b609"/>
+<a href="_albero_8c.html#ad2f7bf3f089fd0b794f30ce9b937f1b9"/>
+<a href="_albero_8c.html#ad388add7beacd8dab5798c7647d3b5a2"/>
+<a href="_albero_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
+<a href="_albero_8c.html#ae786c8b148c79d9b1754c867fd06a8e0"/>
+<a href="_albero_8c.html#afa99ec4acc4ecb2dc3c2d05da15d0e3f"/>
 <a href="_find_element_8c.html"/>
 <a href="_find_element_8c.html#a2a238799924cf0ccb5674397c0e57ccd"/>
 <a href="_find_element_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
@@ -15,6 +25,7 @@
 <a href="_find_sum_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_lista_8c.html"/>
 <a href="_lista_8c.html#a169a25e42f535e62afeea64bb05b297e"/>
+<a href="_lista_8c.html#a561f505fd05d8fbb25f6a4934c1770e3"/>
 <a href="_lista_8c.html#a589e2985bc1b41a1392960746f2c929e"/>
 <a href="_lista_8c.html#a5f4cee015f0b567abe90ead5e4359c96"/>
 <a href="_lista_8c.html#a8be7ec26f6cd51219be210b939a6bbd3"/>
@@ -42,6 +53,10 @@
 <a href="_valuta_studenti_8c.html#a494af334a1fc101f067ae28eaa872749"/>
 <a href="_valuta_studenti_8c.html#aded5147d7b08347b962d027d1530162a"/>
 <a href="_valuta_studenti_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
+<a href="albero_8h.html"/>
+<a href="albero_8h.html#aabf4f709c8199e41cf279c77112345fe"/>
+<a href="albero_8h.html#af4aeda155dbe167f1c1cf38cb65bf324"/>
+<a href="albero_8h_source.html"/>
 <a href="annotated.html"/>
 <a href="classes.html"/>
 <a href="dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.html"/>
@@ -55,6 +70,7 @@
 <a href="globals_enum.html"/>
 <a href="globals_eval.html"/>
 <a href="globals_func.html"/>
+<a href="globals_type.html"/>
 <a href="globals_vars.html"/>
 <a href="index.html"/>
 <a href="lista_8h.html"/>
@@ -64,6 +80,18 @@
 <a href="main_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="md__r_e_a_d_m_e.html"/>
 <a href="pages.html"/>
+<a href="queue_8c.html"/>
+<a href="queue_8c.html#a1683c035029f85266e3c175cef7916d3"/>
+<a href="queue_8c.html#a49fc90f815bdbf49b4e837ba51fe4dc6"/>
+<a href="queue_8c.html#a82fa2574dbb6f5d8e3bb7547a6f2233f"/>
+<a href="queue_8c.html#ad39e3e862333b65bf911c0ad9f1b3b50"/>
+<a href="queue_8h.html"/>
+<a href="queue_8h.html#a1683c035029f85266e3c175cef7916d3"/>
+<a href="queue_8h.html#a49fc90f815bdbf49b4e837ba51fe4dc6"/>
+<a href="queue_8h.html#a82fa2574dbb6f5d8e3bb7547a6f2233f"/>
+<a href="queue_8h.html#ad39e3e862333b65bf911c0ad9f1b3b50"/>
+<a href="queue_8h.html#ae89879d40f2de520473f2e823b6272df"/>
+<a href="queue_8h_source.html"/>
 <a href="reverse_array_8c.html"/>
 <a href="reverse_array_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="reverse_array_8c.html#af5d50ce9679e8dc4fda77bd45ff4f7ec"/>
@@ -82,9 +110,18 @@
 <a href="struct_input_error.html#a02562a8d5feec6a5f4d903b4cbd9509b"/>
 <a href="struct_network_error.html"/>
 <a href="struct_network_error.html#ab54cf2ffe7a35b9c7d13233fd5dac79f"/>
+<a href="struct_queue.html"/>
+<a href="struct_queue.html#a0cf05f13f4ce6a717e1eb225cd86d1d9"/>
+<a href="struct_queue.html#afe8bd8724fefb47966b59c25c77ee44e"/>
+<a href="struct_queue_node.html"/>
+<a href="struct_queue_node.html#a136877f04fdb97f89f706502e5c7bbb3"/>
+<a href="struct_queue_node.html#a62c1c1f34bb19461763b618bbc8b6213"/>
 <a href="structnode.html"/>
+<a href="structnode.html#a1df258d4663fc36cfd0d5d93588aa21f"/>
 <a href="structnode.html#a5c449ac988125bcc21dcee8783fa364b"/>
+<a href="structnode.html#aa7f6939af9ad26854009a062c456f0a9"/>
 <a href="structnode.html#aad210fa7c160a49f6b9a3ffee592a2bc"/>
+<a href="structnode.html#af704f467a8cc2ef230b553dd8d581cc1"/>
 <a href="structprofessore.html"/>
 <a href="structprofessore.html#a3b7ea7403535eb4c2e5f6269b2deeeee"/>
 <a href="structprofessore.html#aca45817b6a45c67e0b5024c2aac481df"/>
