--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -15,9 +15,11 @@
 <a href="_albero_8c.html#acff2e7061cbf3cc0c5c05bb4e931b609"/>
 <a href="_albero_8c.html#ad2f7bf3f089fd0b794f30ce9b937f1b9"/>
 <a href="_albero_8c.html#ad388add7beacd8dab5798c7647d3b5a2"/>
+<a href="_albero_8c.html#ae272d88f70c48e5045993ddbd36b648a"/>
 <a href="_albero_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_albero_8c.html#ae786c8b148c79d9b1754c867fd06a8e0"/>
 <a href="_albero_8c.html#afa99ec4acc4ecb2dc3c2d05da15d0e3f"/>
+<a href="_albero_8c.html#afddbf329e7a0a3b0e648d76913783807"/>
 <a href="_find_element_8c.html"/>
 <a href="_find_element_8c.html#a2a238799924cf0ccb5674397c0e57ccd"/>
 <a href="_find_element_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
