--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -75,6 +75,31 @@
 <a href="globals_func.html"/>
 <a href="globals_type.html"/>
 <a href="globals_vars.html"/>
+<a href="heap_8c.html"/>
+<a href="heap_8c.html#a0a5154baa330acd81b0624fcbc0fa959"/>
+<a href="heap_8c.html#a268980d67b16e772a83d851a8537a354"/>
+<a href="heap_8c.html#a34cd94f7049a5676fa700a136c8f9583"/>
+<a href="heap_8c.html#a36ceadeca3bca71c13d1e6f355a7d7d1"/>
+<a href="heap_8c.html#a4383807aaf42e752fb82a491f5c34a89"/>
+<a href="heap_8c.html#a4b9708d87be7a409eff20e5e7e8b43c8"/>
+<a href="heap_8c.html#a7bab3641f0977b0bb153a31392e7a188"/>
+<a href="heap_8c.html#a8d9196180143e9f5ad01eab9387c47ff"/>
+<a href="heap_8c.html#aad2c3ff1a3f6ee3844b3f2d5b41ce537"/>
+<a href="heap_8c.html#abdb7b984c99dc13fe4a8f7b25f80710b"/>
+<a href="heap_8c.html#adf940bbd2b101ec0acb47d00a5572e6c"/>
+<a href="heap_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
+<a href="heap_8c.html#ae7812f45ad2980faa5b5935290062e77"/>
+<a href="heap_8c.html#af1d3fed78c3b2f7baaf86103d87510ff"/>
+<a href="heap_8h.html"/>
+<a href="heap_8h.html#a0a5154baa330acd81b0624fcbc0fa959"/>
+<a href="heap_8h.html#a1e5fd185949dff8674c0c3b0917cf35d"/>
+<a href="heap_8h.html#a268980d67b16e772a83d851a8537a354"/>
+<a href="heap_8h.html#a36ceadeca3bca71c13d1e6f355a7d7d1"/>
+<a href="heap_8h.html#a8d9196180143e9f5ad01eab9387c47ff"/>
+<a href="heap_8h.html#abc29155cbf8d3ba92a8cb487bbabdc66"/>
+<a href="heap_8h.html#ae7812f45ad2980faa5b5935290062e77"/>
+<a href="heap_8h.html#af1d3fed78c3b2f7baaf86103d87510ff"/>
+<a href="heap_8h_source.html"/>
 <a href="index.html"/>
 <a href="lista_8h.html"/>
 <a href="lista_8h.html#aabf4f709c8199e41cf279c77112345fe"/>
@@ -111,6 +136,9 @@
 <a href="struct_file_error.html#a51ce3b7da4b79f64ac55f485858734a5"/>
 <a href="struct_input_error.html"/>
 <a href="struct_input_error.html#a02562a8d5feec6a5f4d903b4cbd9509b"/>
+<a href="struct_min_heap.html"/>
+<a href="struct_min_heap.html#a656a275b0ca8c80647d6251c09d31247"/>
+<a href="struct_min_heap.html#a9bd4b31bd87a07d32abce19356749c0e"/>
 <a href="struct_network_error.html"/>
 <a href="struct_network_error.html#ab54cf2ffe7a35b9c7d13233fd5dac79f"/>
 <a href="struct_queue.html"/>
